--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<title>test</title>
-hi
+<!DOCTYPE html>
+<title>Kamal Marhubi</title>
+<h1>Kamal Marhubi</h1>
+<ul>
+	<li><a href="">GitHub</a></li>
+	<li><a href="">Twitter</a></li>
+	<li><a href="">LinkedIn</a></li>
+</ul>
