add urls to links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <title>Kamal Marhubi</title>
 <h1>Kamal Marhubi</h1>
 <ul>
-	<li><a href="">GitHub</a></li>
-	<li><a href="">Twitter</a></li>
-	<li><a href="">LinkedIn</a></li>
+	<li><a href="https://github.com/kmrhb">GitHub</a></li>
+	<li><a href="https://twitter.com/kmrhb">Twitter</a></li>
+	<li><a href="http://vimtl.ca/">Vimtl</a></li>
+	<li><a href="http://www.linkedin.com/in/kamalmarhubi">LinkedIn</a></li>
 </ul>
